syntax = "proto3";

package topos.shared.v1;

message ValidatorId {
  // The validator's H160 address
  bytes value = 1;
}